--- a/Sprint_1a_task.ipynb
+++ b/Sprint_1a_task.ipynb
@@ -5,7 +5,7 @@
    "id": "2dc5cb46-8bef-4d52-a85e-480131bf4eef",
    "metadata": {},
    "source": [
-    "1) 123 rəqəmini string/character ə çevirin və tipini yoxlayın."
+    "Task 1.  123 rəqəmini string/character ə çevirin və tipini yoxlayın."
    ]
   },
   {
@@ -37,7 +37,7 @@
    "id": "982fe14c-4eae-427e-adfc-98bc658a2396",
    "metadata": {},
    "source": [
-    "2) 19.99 dəyərini tam ədədə çevirin və nəticəni çap edin."
+    "Task 2.   19.99 dəyərini tam ədədə çevirin və nəticəni çap edin."
    ]
   },
   {
@@ -60,11 +60,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "27db1f6b-3980-4fdf-8b3d-4cdaf6619dcb",
    "metadata": {},
    "source": [
-    "3) \"500\" dəyərini numericə çevirin və 2-yə bölüb nəticəni çap edin."
+    "Task 3.  \"500\" dəyərini numericə çevirin və 2-yə bölüb nəticəni çap edin."
    ]
   },
   {
@@ -89,11 +89,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "7340957a-08c2-4c96-b1e4-546e017788ae",
    "metadata": {},
    "source": [
-    "4) a = 8 və b = 12 yaradın. a < b və a == b şərtlərini yoxlayın, nəticələri çap edin."
+    "Task 4.   a = 8 və b = 12 yaradın. a < b və a == b şərtlərini yoxlayın, nəticələri çap edin."
    ]
   },
   {
@@ -120,11 +120,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "2ed2c302-aa76-42eb-8da9-ba1903d9adce",
    "metadata": {},
    "source": [
-    "5) x = 5, y = 10, z = 15 yaradın. (x < y) and (y < z) şərtini yoxlayın və nəticəni çap edin."
+    "Task 5.   x = 5, y = 10, z = 15 yaradın. (x < y) and (y < z) şərtini yoxlayın və nəticəni çap edin."
    ]
   },
   {
@@ -150,11 +150,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "45e744a5-1484-4c17-89f6-4cfbb491219c",
    "metadata": {},
    "source": [
-    "6) 25-i 4-ə bölün. Tam bölmə, qalıq və adi bölmə nəticələrini çap edin."
+    "Task 6.   25-i 4-ə bölün. Tam bölmə, qalıq və adi bölmə nəticələrini çap edin."
    ]
   },
   {
@@ -180,11 +180,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "511c4eab-125e-41ac-a3c9-13041d38907b",
    "metadata": {},
    "source": [
-    "7) 3-ü 4-cü dərəcəyə qaldırın və nəticəni çap edin."
+    "Task 7.   3-ü 4-cü dərəcəyə qaldırın və nəticəni çap edin."
    ]
   },
   {
@@ -206,11 +206,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "8c884ac9-2a05-4098-b1b6-38bb141070b3",
    "metadata": {},
    "source": [
-    "8) qiymet = 75.5 yaradın. Onu tam ədədə çevirin və tipini yoxlayın."
+    "Task 8.  qiymet = 75.5 yaradın. Onu tam ədədə çevirin və tipini yoxlayın."
    ]
   },
   {
@@ -237,11 +237,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "5e8eeaa1-b46a-4615-b97e-6bc564dd95b8",
    "metadata": {},
    "source": [
-    "9) n = 20 yaradın. (n > 10) or (n < 5) və (n > 15) and (n < 25) şərtlərini yoxlayın, nəticələri çap edin."
+    "Task 9.  n = 20 yaradın. (n > 10) or (n < 5) və (n > 15) and (n < 25) şərtlərini yoxlayın, nəticələri çap edin."
    ]
   },
   {
@@ -267,11 +267,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "27ad4d36-b6d4-4a1c-a59e-0d17a96e9e4e",
    "metadata": {},
    "source": [
-    "10) \"42.8\" dəyərini əvvəl float-a, sonra tam ədədə çevirin və hər addımda tipi yoxlayın."
+    "Task 10.  \"42.8\" dəyərini əvvəl float-a, sonra tam ədədə çevirin və hər addımda tipi yoxlayın."
    ]
   },
   {
