--- a/Sprint_1b_task.ipynb
+++ b/Sprint_1b_task.ipynb
@@ -9,16 +9,20 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "e0c6fb2e-e431-4983-ad28-d4cf7451b9a6",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "1) s = \"Programming\" yaradın. Uzunluğunu və ilk simvolunu çap edin."
+    "Task 1. s = \"Programming\" yaradın. Uzunluğunu və ilk simvolunu çap edin."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "dfa12c04-3510-461d-9dc0-6583096e8c02",
    "metadata": {},
    "outputs": [
@@ -39,16 +43,16 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "3404c8bd-3dfe-4edd-9bf0-ee771a93b662",
    "metadata": {},
    "source": [
-    "2) s1 = \"Hello\" və s2 = \"World\" yaradın. Onları boşluqla birləşdirin və nəticəni çap edin."
+    "Task 2. s1 = \"Hello\" və s2 = \"World\" yaradın. Onları boşluqla birləşdirin və nəticəni çap edin."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "21c03588-1df8-414e-a5bc-ae38b0bab7ff",
    "metadata": {},
    "outputs": [
@@ -70,16 +74,20 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "bb1185de-66bd-4291-bfda-8e4526b30337",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "3) text = \"Python\" yaradın. Son simvolunu çap edin."
+    "Task 3. text = \"Python\" yaradın. Son simvolunu çap edin."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "ad080762-4ef7-4737-b69d-666f6e03e517",
    "metadata": {},
    "outputs": [
@@ -98,16 +106,20 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "a9842783-c4f2-47f3-8c7a-09268b4fbeb5",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "4) s = \"Artificial\" yaradın. \"Art\" hissəsini çıxarın və çap edin."
+    "Task 4. s = \"Artificial\" yaradın. \"Art\" hissəsini çıxarın və çap edin."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "e52191b4-6be4-436b-ac25-4aa33912f695",
    "metadata": {},
    "outputs": [
@@ -128,16 +140,16 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "235b28b5-f5de-48b6-9021-3a25970588b7",
    "metadata": {},
    "source": [
-    "5) word = \"Code\" yaradın. Tərsinə çevirin və nəticəni çap edin."
+    "Task 5.  word = \"Code\" yaradın. Tərsinə çevirin və nəticəni çap edin."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "8c5c54e6-56bb-4cb5-b35e-e2108c9d6a95",
    "metadata": {},
    "outputs": [
@@ -158,11 +170,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "3820defc-dae1-4b33-871f-c912568ec77b",
    "metadata": {},
    "source": [
-    "6) s = \"abcdefgh\" yaradın. Hər ikinci simvolu alın və çap edin."
+    "Task 6.  s = \"abcdefgh\" yaradın. Hər ikinci simvolu alın və çap edin."
    ]
   },
   {
@@ -190,16 +202,16 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "75011f3a-622e-4ba5-bae3-b0aa82371f4d",
    "metadata": {},
    "source": [
-    "7) text = \"data\" yaradın. Onu bir sətrlik kodla böyük hərflərə və kiçik hərflərə çevirib çap edin."
+    "Task 7.  text = \"data\" yaradın. Onu bir sətrlik kodla böyük hərflərə və kiçik hərflərə çevirib çap edin."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "42ab1e1b-95a5-43d9-addd-ddffd212027b",
    "metadata": {},
    "outputs": [
@@ -218,16 +230,16 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "c4e86731-99c4-4666-8b60-cb9779c51197",
    "metadata": {},
    "source": [
-    "8) s = \"Python-R-Java\" yaradın. \"-\" ilə ayırın (split(\"-\")) və nəticəni çap edin."
+    "Task 8.  s = \"Python-R-Java\" yaradın. \"-\" ilə ayırın (split(\"-\")) və nəticəni çap edin."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "f2dbcc03-2066-4b39-ac63-f92fa59f21be",
    "metadata": {},
    "outputs": [
@@ -246,16 +258,16 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "7e2c966c-0069-4211-88de-3a9e8a15693a",
    "metadata": {},
    "source": [
-    "9) ad = \"Ayxan\" və yaş = 25 yaradın. f-string ilə \"Ayxan 25 yaşındadır\" çap edin."
+    "Task 9. ad = \"Ayxan\" və yaş = 25 yaradın. f-string ilə \"Ayxan 25 yaşındadır\" çap edin."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "b7af41eb-15a6-44a0-8ab9-4bf943273a0e",
    "metadata": {},
    "outputs": [
@@ -275,25 +287,37 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "471eafdc-99f7-4f9b-bc4e-703e4dae7f03",
    "metadata": {},
    "source": [
-    "10) s = \"salam-dunya\" yaradın. \"-\"ni boşluqla əvəz edin və nəticəni çap edin."
+    "Task 10.  s = \"salam-dunya\" yaradın. \"-\"ni boşluqla əvəz edin və nəticəni çap edin."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d156df88-c8f5-45e0-a292-dcdaf0c7475b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "salam dunya\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"salam-dunya\"\n",
+    "s = s.replace(\"-\", \" \")\n",
+    "print(s)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -307,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
