--- a/Sprint_2a_tasks.ipynb
+++ b/Sprint_2a_tasks.ipynb
@@ -9,11 +9,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "21f4d9c1-a6ca-47f8-9e02-36b0c69a3c49",
    "metadata": {},
    "source": [
-    "1) 5, 10, 15, 20 rəqəmlərindən ibarət “rəqəmlər” adlı list/vector yaradın"
+    "Task 1.  5, 10, 15, 20 rəqəmlərindən ibarət “rəqəmlər” adlı list/vector yaradın"
    ]
   },
   {
@@ -42,11 +42,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "f23e40b2-0edd-4390-bd2e-8dfd1fd9b16e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "2) “rəqəmlər” listinin/vectorunun uzunluğunu tapın"
+    "Task 2. “rəqəmlər” listinin/vectorunun uzunluğunu tapın"
    ]
   },
   {
@@ -68,11 +72,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "0db42fc1-d43b-41aa-a4b4-3e31493d7e84",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "3) “rəqəmlər” listinə/vectoruna 25 elementini əlavə edin"
+    "Task 3.  “rəqəmlər” listinə/vectoruna 25 elementini əlavə edin"
    ]
   },
   {
@@ -96,11 +104,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "28ad2e98-cf21-41f2-8ba3-dd5ba815c613",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "4) “rəqəmlər” listinin/vectorunun 2-ci indeksinə 12 elementini əlavə edin"
+    "Task 4. “rəqəmlər” listinin/vectorunun 2-ci indeksinə 12 elementini əlavə edin"
    ]
   },
   {
@@ -126,11 +138,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "72071355-d9d7-4374-8389-c558ebcc9389",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "5) 1, 2, 3 və 4, 5, 6 listlərini/vectorlarını birləşdirin"
+    "Task 5.  1, 2, 3 və 4, 5, 6 listlərini/vectorlarını birləşdirin"
    ]
   },
   {
@@ -155,11 +171,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "3a436f9b-e0f6-4eaf-9a4d-b35b7213f51b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "6) “rəqəmlər” listindən/vectorundan 2-ci və 3-cü elementləri seçin"
+    "Task 6. “rəqəmlər” listindən/vectorundan 2-ci və 3-cü elementləri seçin"
    ]
   },
   {
@@ -181,11 +201,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "d4933e4b-3559-46ae-8e96-aa61816f1fef",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "7) “rəqəmlər” listinin/vectorunun ilk elementini 50 ilə əvəz edin "
+    "Task 7. “rəqəmlər” listinin/vectorunun ilk elementini 50 ilə əvəz edin "
    ]
   },
   {
@@ -208,11 +232,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "e24e1a00-921a-4207-83b7-8775854e45a7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "8) “rəqəmlər” listində/vectorunda 19 elementinin olub-olmadığını yoxlayın"
+    "Task 8.  “rəqəmlər” listində/vectorunda 19 elementinin olub-olmadığını yoxlayın"
    ]
   },
   {
@@ -237,11 +265,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "f5b548a2-600a-4298-9643-a90a3948c673",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "9) \"a\", \"b\", \"a\", \"c\" listində/vectorunda \"a\" elementinin neçə dəfə təkrarlandığını tapın"
+    "Task 9.  \"a\", \"b\", \"a\", \"c\" listində/vectorunda \"a\" elementinin neçə dəfə təkrarlandığını tapın"
    ]
   },
   {
@@ -265,11 +297,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "81da1439-ad63-4f70-88f7-d979bcea5c81",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "10) \"x\", \"y\", \"x\", \"z\" listindən/vectorundan \"x\" elementlərini silin"
+    "Task 10. \"x\", \"y\", \"x\", \"z\" listindən/vectorundan \"x\" elementlərini silin"
    ]
   },
   {
@@ -296,11 +332,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "bb7423c3-461d-4568-a51f-f1e7a72e0df1",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "11) 7, 2, 9, 1 listini/vectorunu azalan sırayla sıralayın"
+    "Task 11. 7, 2, 9, 1 listini/vectorunu azalan sırayla sıralayın"
    ]
   },
   {
@@ -326,11 +366,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "e6aaa9c8-899b-4400-b9ad-69cc9504d24d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "12) “rəqəmlər” listindən/vectorundan 10-dan böyük elementləri seçin"
+    "Task 12.  “rəqəmlər” listindən/vectorundan 10-dan böyük elementləri seçin"
    ]
   },
   {
@@ -362,7 +406,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -376,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
