--- a/Sprint_2b_tasks.ipynb
+++ b/Sprint_2b_tasks.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6f532c04-9e2f-432b-94a2-69dee8490bdf",
    "metadata": {},
    "outputs": [],
@@ -20,16 +20,20 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "428150bd-2c3b-410f-8431-ec196aadf7bb",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "1) 10, 20, 30, 40 elementlərindən ibarət s1 adlı series/vector yaradın"
+    "Task 1. 10, 20, 30, 40 elementlərindən ibarət s1 adlı series/vector yaradın"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "0a9bc270-04b5-4ff5-80b7-e107c3949505",
    "metadata": {},
    "outputs": [
@@ -54,11 +58,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "05482103-6294-449d-aec2-93a3939a8706",
    "metadata": {},
    "source": [
-    "2) s1-ə 'w', 'x', 'y', 'z' indekslərini təyin edin"
+    "Task 2. s1-ə 'w', 'x', 'y', 'z' indekslərini təyin edin"
    ]
   },
   {
@@ -86,11 +90,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "8279fe1c-9609-4943-b4bd-cd942892f01e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "3) Python: {'p': 5, 'q': 10, 'r': 15} dictionary-dən s2 adlı Series yaradın"
+    "Task 3.  Python: {'p': 5, 'q': 10, 'r': 15} dictionary-dən s2 adlı Series yaradın"
    ]
   },
   {
@@ -119,11 +127,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "671298d6-42ce-4dcf-9442-07569ed8d636",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "4) s2-dən 'q' indeksli elementi seçin"
+    "Task 4.  s2-dən 'q' indeksli elementi seçin"
    ]
   },
   {
@@ -145,11 +157,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "654e457b-f2d9-4fbd-8969-5db1ac5811a4",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "5) s1-dən 25-dən böyük elementləri seçin"
+    "Task 5.  s1-dən 25-dən böyük elementləri seçin"
    ]
   },
   {
@@ -182,11 +198,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "9e3d8c59-5e3f-4f8a-b34b-5a8f60e2a5c6",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "6) s1-də 20-dən böyük elementləri 10-a bölün "
+    "Task 6. s1-də 20-dən böyük elementləri 10-a bölün "
    ]
   },
   {
@@ -216,11 +236,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "a3fb7293-39b2-4b85-b1e6-1a70e224dad2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "7) ((1, 2), (3, 4)) listindən/vectorundan df1 adlı dataframe yaradın"
+    "Task 7. ((1, 2), (3, 4)) listindən/vectorundan df1 adlı dataframe yaradın"
    ]
   },
   {
@@ -247,11 +271,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "8c46ecb3-78c3-46bf-9d0a-63b06a1d7b2a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "8) df1-ə ('r1', 'r2') sətir və ('c1', 'c2') sütun adlarını təyin edin"
+    "Task 8. df1-ə ('r1', 'r2') sətir və ('c1', 'c2') sütun adlarını təyin edin"
    ]
   },
   {
@@ -278,11 +306,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "545dac9a-5315-46b4-96f8-84dbcc025fa5",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "9) Python: {'A': [1, 2], 'B': [3, 4]} dictionary-dən df2 yaradın"
+    "Task 9. Python: {'A': [1, 2], 'B': [3, 4]} dictionary-dən df2 yaradın"
    ]
   },
   {
@@ -310,11 +342,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "dc7e23e1-ba35-4e66-83c1-3d69a912b7c6",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
-    "10) df2-də 'A' sütunu 1-dən böyük olan sətirləri seçin"
+    "Task 10. df2-də 'A' sütunu 1-dən böyük olan sətirləri seçin"
    ]
   },
   {
@@ -325,19 +361,11 @@
     "df3 = df2[df2['A'] > 1]\n",
     "print(df3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee78df57-a40b-40ca-aedb-a29187d451eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -351,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
